EVA-237 feat: Se cambia mensaje de ayuda del dropzone en el modal de finalizar una actividad.

--- a/GestionActividades/templates/GestionActividades/Actividades/_cargar_editar_soportes_modal.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/_cargar_editar_soportes_modal.html
@@ -29,7 +29,7 @@
                                         <div id="dZUpload" class="dropzone">
                                               <div class="dz-default dz-message">
                                                   <i class="fal fa-cloud-upload color-primary-600 mb-3"></i> <br>
-                                                  <span class="text-uppercase text-muted fs-md">arrastre los archivos aquí o presione click para cargarlos</span>
+                                                  <span class="text-uppercase text-muted fs-md">arrastre los archivos aquí o haga clic para cargarlos</span>
                                               </div>
 
                                         </div>
