EVA-243 refactor: Se modifican en los templates del directorio de Actividades los nombres y los id's de algunos campos que se muestran al usuario, nombrándolos de forma mas optima de acuerdo al valor que reciben o muestran.

--- a/GestionActividades/templates/GestionActividades/Actividades/_cerrar_reabrir_actividad_modal.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/_cerrar_reabrir_actividad_modal.html
@@ -24,7 +24,7 @@
                     {% endif %}
                     <div class="form-group">
                         <div id="motivo" class="col-md-12">
-                            {% input_textarea_tag 'motivo' 'Motivo' placeholder="Digite Motivo" value="" required="" mensaje_validacion='Por favor digite el motivo.' %}
+                            {% input_textarea_tag 'motivo' 'Comentarios' placeholder="Ingrese un comentario" value="" required="" mensaje_validacion='Por favor digite el motivo.' %}
                         </div>
                     </div>
                 </div>
