--- a/GestionActividades/templates/GestionActividades/Actividades/_actualizar_actividad_modal.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/_actualizar_actividad_modal.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            {% input_number_tag 'horas' 'Horas' placeholder="Ingrese el número de horas empleadas"  required=""  min="0" max="9999" step="0.01" value=''  mensaje_validacion='Por favor digite el número de horas' invalido=errores.horas %}
+                            {% input_number_tag 'tiempo_invertido' 'Tiempo Invertido (Horas)' placeholder="Ingrese el número de horas"  required=""  min="0" max="9999" step="0.01" value=''  mensaje_validacion='Por favor digite el número de horas' invalido=errores.horas %}
                         </div>
                     </div>
                     <div class="form-group">
